--- a/conf/rtc_cpp.conf
+++ b/conf/rtc_cpp.conf
@@ -446,3 +446,4 @@ manager.components.precreate:ConsoleInput,ConsoleOutput,Multiplyer
 Tutorial.ConsoleInput0.config_file:conf/ConsoleInput0.conf
 Tutorial.ConsoleOutput0.config_file:conf/ConsoleOutput0.conf
 Tutorial.Multiplyer0.config_file:conf/Multiplyer0.conf
+Experimental.Multiplyer0.config_file:conf/Multiplyer0.conf
